After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 597882 - Time ago strings don't get translated
Time ago strings don't get translated
Status: RESOLVED FIXED
Product: gnome-shell
Classification: Core
Component: general
unspecified
Other Linux
: Normal major
: ---
Assigned To: gnome-shell-maint
gnome-shell-maint
Depends on:
Blocks:
 
 
Reported: 2009-10-09 07:05 UTC by Marina Zhurakhinskaya
Modified: 2010-01-15 17:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix missing translations for 'time ago' strings (2.32 KB, patch)
2010-01-15 11:37 UTC, Florian Müllner
committed Details | Review

Description Marina Zhurakhinskaya 2009-10-09 07:05:56 UTC
Time ago strings that we get with ngettext() in shell_global_format_time_relative_pretty() don't get translated. Tried it out with both Russian and French language settings to be sure it's not just a translation file problem.
Comment 1 Florian Müllner 2010-01-15 11:37:25 UTC
Created attachment 151461 [details] [review]
Fix missing translations for 'time ago' strings

Replace ngettext with dngettext and set the correct translation
domain, so gnome-shell's domain is searched for translations
rather than mutter's.
Comment 2 Colin Walters 2010-01-15 16:46:39 UTC
Review of attachment 151461 [details] [review]:

LGTM, thanks!
Comment 3 Colin Walters 2010-01-15 16:46:39 UTC
Review of attachment 151461 [details] [review]:

LGTM, thanks!
Comment 4 Florian Müllner 2010-01-15 17:17:33 UTC
Comment on attachment 151461 [details] [review]
Fix missing translations for 'time ago' strings

Attachment 151461 [details] pushed as ccc6a23 - Fix missing translations for 'time ago' strings